; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ti/wl1251/extr_boot.c_wl1251_boot_target_enable_interrupts.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ti/wl1251/extr_boot.c_wl1251_boot_target_enable_interrupts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wl1251 = type { i32 }

@ACX_REG_INTERRUPT_MASK = common dso_local global i32 0, align 4
@HI_CFG = common dso_local global i32 0, align 4
@HI_CFG_DEF_VAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @wl1251_boot_target_enable_interrupts(%struct.wl1251* %0) #0 {
  %2 = alloca %struct.wl1251*, align 8
  store %struct.wl1251* %0, %struct.wl1251** %2, align 8
  %3 = load %struct.wl1251*, %struct.wl1251** %2, align 8
  %4 = load i32, i32* @ACX_REG_INTERRUPT_MASK, align 4
  %5 = load %struct.wl1251*, %struct.wl1251** %2, align 8
  %6 = getelementptr inbounds %struct.wl1251, %struct.wl1251* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = xor i32 %7, -1
  %9 = call i32 @wl1251_reg_write32(%struct.wl1251* %3, i32 %4, i32 %8)
  %10 = load %struct.wl1251*, %struct.wl1251** %2, align 8
  %11 = load i32, i32* @HI_CFG, align 4
  %12 = load i32, i32* @HI_CFG_DEF_VAL, align 4
  %13 = call i32 @wl1251_reg_write32(%struct.wl1251* %10, i32 %11, i32 %12)
  ret void
}

declare dso_local i32 @wl1251_reg_write32(%struct.wl1251*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
